kubernetes/homeassistant/base/statefulset.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
    app.kubernetes.io/instance: homeassistant
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    #   checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_20=Containers Runs CHOWN and MKDIR
    checkov.io/skip3: CKV_K8S_25=Containers Runs CHOWN and MKDIR
spec:
  replicas: 1
  serviceName: homeassistant
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
      annotations:
        enable.version-checker.io/homeassistant: "true"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        fsGroup: 1001080000 # Custom OKD UID
      volumes:
        - name: homeassistant
          persistentVolumeClaim:
            claimName: homeassistant
        - name: configuration-yaml
          configMap:
            name: homeassistant-config
        - name: certificate
          secret:
            secretName: homeassistant-cert
        - name: run
          emptyDir:
            sizeLimit: 10Mi
        - name: config
          emptyDir:
            sizeLimit: 10Mi
        - name: cache
          emptyDir:
            sizeLimit: 10Mi
      serviceAccountName: homeassistant-sa
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: homeassistant
          # renovate: datasource=docker depName=docker.io/homeassistant/home-assistant
          image: docker.io/homeassistant/home-assistant:2026.9.4@sha256:3e6710a7ab2a61311d9d899b719f6c3657791c63e8f4942cec4ebc42401d6b76
          securityContext:
            allowPrivilegeEscalation: true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              add:
                - CHOWN
                - SETUID
                - SETGID
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001080000 # Custom OKD UID
          ports:
            # - hostPort: 8123
            - containerPort: 8123
          resources:
            limits:
              cpu: 300m
              memory: 3Gi
            requests:
              cpu: 10m
              memory: 1.5Gi
          volumeMounts:
            - name: homeassistant
              mountPath: /config
            - name: configuration-yaml
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
            - name: certificate
              mountPath: /ssl
            - name: run
              mountPath: /run
            - name: config
              mountPath: /.config
            - name: cache
              mountPath: /.cache
          livenessProbe:
            httpGet:
              path: /manifest.json
              port: 8123
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /manifest.json
              port: 8123
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 10
            initialDelaySeconds: 3
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /manifest.json
              port: 8123
              scheme: HTTPS
            timeoutSeconds: 1
            periodSeconds: 5
            successThreshold: 1
            initialDelaySeconds: 3
            failureThreshold: 30
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      automountServiceAccountToken: false
      # hostNetwork: true
      hostname: homeassistant
      schedulerName: default-scheduler
      enableServiceLinks: false
